prod/todo-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: notes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: notes
  name: todo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo-app
    spec:
      containers:
      - image: haroonniamat029/notes:latest
        imagePullPolicy: Always
        name: todo-app
        ports:
        - containerPort: 8000
          protocol: TCP
      
---
apiVersion: v1
kind: Service
metadata:
  namespace: notes
  name: todo-app
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: todo-app
